# Sistema-mixto-de-anulacion-de-ruido

./: Filtrado de señal  Generador de señal  Microphone.py  README.md  pyproject.toml  res
anc/models/: anc.py
anc/utils/: audio_generation.py  helm  plot_signals.py
