[project]
name = "anc"
version = "0.1.0"
description = ""
authors = [
    {name = "David",email = "dmorad@unal.edu.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyaudio (>=0.2.14,<0.3.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
